fix: button spacing in about

--- a/src/styles/contactForm.module.css
+++ b/src/styles/contactForm.module.css
@@ -37,7 +37,6 @@
 .buttonContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
 }
 
 @media only screen and (max-width: 1024px) {
