--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -162,10 +162,19 @@
     margin-top: 20px;
     transform: scale(0.8);
   }
+
+  .button{
+    scale: 0.8;
+    padding: 10px 10px;
+  }
 }
 
 .portfolioContainer{
   text-align: center;
   font-size: 1.2rem;
+}
+
+.buttonContainer {
+  text-align: left;
 }
 
